Remove emoji from channel list title

--- a/index.html
+++ b/index.html
@@ -9741,7 +9741,7 @@
         currentServerId = null;
         currentRoom = null;
         
-        document.getElementById('channelListTitle').textContent = '🌐 Explore Public Servers';
+        document.getElementById('channelListTitle').textContent = ' Explore Public Servers';
         const roomsDiv = document.getElementById('rooms');
         roomsDiv.innerHTML = '<div style="padding: 15px; text-align: center; color: #888;">Loading public servers...</div>';
         
