--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Cordis</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CordDis v4 </title> <link rel="icon" type="image/png" href="https://file.garden/Z43SqDt67TpUFO8v/retouch_2025031817385428.png"><meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700;800;900&display=swap" rel="stylesheet">
 
